# vision_new

./: .gitignore  .gitmodules  Dockerfile  Pipfile  Project.toml  Readme.MD  Video.h264  VisionDisplayOverlays.py  button_fun.py  circle_detect.py  docker-compose.yml  filtered_image.tif  pyproject.toml
2024_vision/: draw_lines.py  line_detect.py
Computer_vision_explore_anal/: Explore_param.ipynb  circle_detect.py
JSON/: ComputerVision.json
ModularFile/: arduinoConnector.py  button.py  camera.py  display.py  interface.py  mainSwitch.py  mainUI.py  processedImage.py  variables.py
Tests/: cameraOverlayTest.py  cameraOverlayTestNumpyExample.py  cameraOverlayTestPILExample.py  serialTest.py  testCameraSavingVideoFiles.py  testSSH.py
Tests/Tests2022/: videoTesting.py  videoTestingPiCam.py
archive/: BuildingOverlay.py  Overlay.py  VisionDisplayOverlays.py  VisionDisplayOverlays.py.save  button_fun.py  testBasic.py
archive/ModularFile/: arduinoConnector.py  camera.py  display.py  mainUI.py  processedImage.py  variables.py
edge_detection/: angle.py  edge.py  edge_exp.py
protobuf/: README.md  VisionDAQ.proto  protobuf_example.py
pyqtTest/: arduinoConnector.py  loadFrameTest.py  mainApp.py  testCv2.py
pyqt_Main/: arduinoConnector.py  loadFrameTest.py  mainApp.py  subc.py  testCv2.py  variables.py
serial-write/: serial-write.ino
