[tool.poetry]
name = "vision_new"
version = "0.1.0"
description = ""
authors = ["tu1026 <s31302@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.6"
opencv-python = "^4.5.5"
pyserial = "^3.5"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.3"
jupyter = "^1.0.0"
notebook = "^6.4.12"
matplotlib = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
